work/9a/1dca1d984c2fe9f067e2e36ab5b159/.command.err
.command.run: line 284: TZ: unbound variable
  File "/app/compute_metrics.py", line 207
    gt_by_id = {p.stem.replace("gt_","").replace(".nii","": p) for p in gt_all}
                                                          ^
SyntaxError: invalid syntax
